--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "generate": "npx prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.1",
     "@hookform/resolvers": "^5.0.1",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "latest",
+    "@prisma/client": "6.7.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-avatar": "^1.1.7",
@@ -27,9 +27,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.506.0",
     "next": "15.3.1",
-    "next-auth": "^4.24.11",
+    "next-auth": "beta",
     "next-themes": "^0.4.6",
-    "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
@@ -48,6 +47,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "prisma": "^6.7.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5"
