--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "migrate": "npx prisma migrate dev --name add-author-relation",
-    "generate": "npx prisma generate"
+    "generate": "npx prisma generate",
+    "resetdb":"npx prisma db execute --file ./drop-all-tables.sql --schema=./prisma/schema.prisma"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
