edit user dialog fixed

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "migrate": "npx prisma migrate dev --name add-author-relation",
     "generate": "npx prisma generate",
-    "resetdb":"npx prisma db execute --file ./drop-all-tables.sql --schema=./prisma/schema.prisma"
+    "resetdb": "npx prisma db execute --file ./drop-all-tables.sql --schema=./prisma/schema.prisma"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
@@ -20,6 +20,7 @@
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.13",
     "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-separator": "^1.1.5",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.10",
