--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.506.0",
+    "motion": "^12.11.3",
     "next": "15.3.1",
     "next-auth": "beta",
     "next-themes": "^0.4.6",
