--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@prisma/extension-accelerate": "^1.3.0",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-avatar": "^1.1.7",
-    "@radix-ui/react-dropdown-menu": "^2.1.13",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-separator": "^1.1.5",
@@ -37,6 +37,7 @@
     "react-hook-form": "^7.56.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.24.3"
   },
   "devDependencies": {
