--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "migrate": "npx prisma migrate dev --name add-author-relation",
     "generate": "npx prisma generate",
     "resetdb": "npx prisma db execute --file ./drop-all-tables.sql --schema=./prisma/schema.prisma",
-    "seed":"npx ts-node --project tsconfig.seed.json prisma/seed.ts"
+    "seed": "npx ts-node --project tsconfig.seed.json prisma/seed.ts",
+    "reset": "ts-node --project tsconfig.seed.json scripts/reset-and-seed.ts",
+    "studio": "npx prisma studio"
   },
   "prisma": {
     "seed": "ts-node --project tsconfig.seed.json prisma/seed.ts"
@@ -28,6 +30,7 @@
     "@radix-ui/react-separator": "^1.1.5",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.10",
+    "@tanstack/react-table": "^8.21.3",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
