--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "migrate": "npx prisma migrate dev --name add-author-relation",
@@ -13,7 +13,8 @@
     "seed": "npx ts-node --project tsconfig.seed.json prisma/seed.ts",
     "reset": "ts-node --project tsconfig.seed.json scripts/reset-and-seed.ts",
     "studio": "npx prisma studio",
-    "seed2": "npx prisma db seed"
+    "seed2": "npx prisma db seed",
+    "test:prisma": "ts-node --project tsconfig.seed.json scripts/prisma-test.ts"
   },
   "prisma": {
     "seed": "ts-node --project tsconfig.seed.json prisma/seed.ts"
@@ -21,8 +22,8 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
     "@hookform/resolvers": "^5.0.1",
-    "@prisma/client": "6.7.0",
-    "@prisma/extension-accelerate": "^1.3.0",
+    "@prisma/client": "latest",
+    "@prisma/extension-accelerate": "^2.0.0",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
@@ -64,7 +65,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.7.0",
+    "prisma": "^6.8.2",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.2.8",
